template/static/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

body { 
    background-color: #fff0cf;
}

/* ----- ----- ----- Login Page ----- ----- -----*/
.container {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    background: #fff0cf;
}

.login {
    width: 420px;
    background: #ffdc92;
    border: 2px solid black;
    backdrop-filter: blur(20px);
    box-shadow: 0 0 10px black;
    color: black;
    border-radius: 10px;
    padding: 30px 40px;
}

h1 {
    text-align: center;
    font-size: 36px;
    margin-bottom: 20px;
}

.login .input-box {
    position: relative;
    width: 100%;
    height: 50px;
    margin: 20px 0;
}

.input-box input {
    width: 100%;
    height: 100%;
    background: #fff0cf;
    border: none;
    outline: none;
    border: 2px solid black;
    border-radius: 40px;
    font-size: 16px;
    color: black;
    padding: 20px 45px 20px 20px;
}

.input-box input::placeholder {
    color: black;
}

.input-box i {
    position: absolute;
    right: 20px;
    top: 50%;
    transform: translateY(-50%);
    font-size: 20px;
}

.login .btn {
    width: 100%;
    height: 45px;
    background-color: #fff0cf;
    border: none;
    outline: none;
    border-radius: 40px;
    box-shadow: 0 0 5px black;
    cursor: pointer;
    font-size: 16px;
    color: black;
    font-weight: 600;
    margin-top: 20px;
}

.login .btn:hover {
    box-shadow: 0 0 10px black;
    transition: 0.2s;
}

.login .link {
    font-size: 14.5px;
    text-align: center;
    margin-top: 20px;
}

.link p a {
    color: black;
    text-decoration: none;
    font-weight: 600;
}

.link p a:hover {
    text-decoration: underline;
}

/* ----- ----- ----- Register Page ----- ----- ----- */
.register {
    width: 420px;
    background: #ffdc92;
    border: 2px solid black;
    backdrop-filter: blur(20px);
    box-shadow: 0 0 10px black;
    color: black;
    border-radius: 10px;
    padding: 30px 40px;
}

.register .input-box {
    position: relative;
    width: 100%;
    height: 50px;
    margin: 20px 0;
}

.register .btn {
    width: 100%;
    height: 45px;
    background-color: #fff0cf;
    border: none;
    outline: none;
    border-radius: 40px;
    box-shadow: 0 0 5px black;
    cursor: pointer;
    font-size: 16px;
    color: black;
    font-weight: 600;
    margin-top: 20px;
}

.register .btn:hover {
    box-shadow: 0 0 10px black;
    transition: 0.2s;
}

.register .link {
    font-size: 14.5px;
    text-align: center;
    margin-top: 20px;
}

/* ----- ----- ----- Header ----- ----- ----- */
header {
    position: fixed;
    width: 100%;
    padding: 20px 5%;
    justify-content: space-between;
    background-color: #ffdc92;
}

#home {
    background-color: #ffdc92;
    float: left;
    margin: 10px 15px;
}

#home a {
    font-size: 20px;
    color: black;
    background-color: transparent;
    text-decoration: none;
    position: relative;
}

#home a::after {
    content: '';
    width: 0%;
    height: 3px;
    background: black;
    position: absolute;
    left: 0;
    bottom: -6px;
    transition: 0.5s;
}

#home a:hover::after {
    width: 100%;
}

#nav {
    float: right;
}
#nav ul {
    background-color: #ffdc92;
    text-align: center;
    list-style: none;
}

#nav ul li {
    display: inline-block;
    margin: 10px 15px;
}

nav ul li a {
    font-size: 20px;
    color: black;
    background-color: #ffdc92;
    text-decoration: none;
    position: relative;
}

nav ul li a::after {
    content: '';
    width: 0%;
    height: 3px;
    background: black;
    position: absolute;
    left: 0;
    bottom: -6px;
    transition: 0.5s;
}

nav ul li a:hover::after {
    width: 100%;
}

/* ----- ----- ----- Home ----- ----- ----- */
#profiles {
    padding-top: 100px;
}

.column {
    float: left;
}
  
.left, .right {
    padding: 15px;
    padding-top: 400px;
    width: 10%;
}
  
.middle {
    padding: 15px;
    width: 80%;
}

.rows:after {
    content: "";
    display: table;
    clear: both;
}

.profile-image {
    float: left;
}

.profile-image img {
    border: 3px solid black;
    height: 250px;
    border-radius: 50%;
}

.user-name {
    display: flex;
    padding: 0px 30px 10px;
}

.user-major {
    display: flex;
    padding: 0px 30px 10px;
}

.bio {
    display: flex;
    padding: 0px 30px 10px;
}

.choice-btn {
    position: fixed;
    height: 50px;
    width: 50px;
    border-radius: 50%;
}

.choice-btn:hover {
    cursor: pointer;
}

.image {
    display: fixed;
    margin: 5px;
    border: 1px solid black;
    float: left;
    width: 200px;
}
  
.image img {
    width: 190px;
    height: auto;
}
  
.desc {
    padding: 15px;
    text-align: center;
}

.gallery {
    padding: 165px;
    display: flex;
    justify-content: center;
    position: fixed;
}

/* ----- ----- ----- Profile Edit ----- ----- ----- */
#profile-editor {
    padding-top: 100px;
}

#profile-editor img {
    width: 200px;
    border-radius: 50%;
    margin: 10px 30px;
}

.image-label {
    display: block;
    text-align: center;
    width: 140px;
    background-color: #ffdc92;
    padding: 10px;
    margin: 10px;
    border-radius: 15%;
    cursor: pointer;
}

.image-input {
    display: none;
}

label {
    display: flex;
    padding: 5px 10px 0px;
}

#profile-editor input {
    display: flex;
    margin: 5px 10px ;
    padding: 5px;
}

/* ----- ----- ----- Matches ----- ----- ----- */
.matches {
    padding-top: 100px;
}

